Fixed text overflow issues resolves #373 and #130 (#416)
These errors where looming large so I thought I could get a fix.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -303,6 +303,9 @@ figure.effect-gcihover:hover figcaption::before {
 .mentors .card p, .students-sec .card p, .projects-sec .card p {
     margin-top: 4.5%;
     font-size: 20px;
+    white-space: nowrap;
+    padding: 5px;
+    overflow-x: scroll;
 }
 .mentors .avatar, #contributors-list .avatar, .students-sec .avatar, .projects-sec .avatar {
     position: relative;
